--- a/index.html
+++ b/index.html
@@ -3,10 +3,39 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/main.scss">
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/main.css">
+  <link href="https://fonts.googleapis.com/css?family=Rajdhani&display=swap" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="js/script.js"></script>
   <title>DAICHI Portfolio</title>
 </head>
 <body>
-  
+  <main>
+    <section class="top-visual">
+
+    </section>
+    <header class="header">
+
+    </header>
+    <section class="about">
+
+    </section>
+    <section class="skill">
+
+    </section>
+    <section class="work">
+
+    </section>
+    <section class="price">
+
+    </section>
+    <section class="contact">
+
+    </section>
+  </main>
+  <footer>
+
+  </footer>
 </body>
 </html>
