スクロール誘導実装

--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>DAICHI Portfolio</title>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/main.css">
   <link href="https://fonts.googleapis.com/css?family=Rajdhani&display=swap" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="js/script.js"></script>
-  <title>DAICHI Portfolio</title>
 </head>
 <body>
   <main>
     <section class="top-visual">
-
+      <h1>DAICHI's Portfolio</h1>
+      <p>Thank you for visiting this page.</p>
+      <p>This is a website production in Fukuoka
+          Ito Daichi’s portfolio site.</p>
+          <div class="scroll" >
+            <a href="#"><span></span>Scroll</a>
+          </div>
     </section>
     <header class="header">
 
@@ -22,6 +28,9 @@
 
     </section>
     <section class="skill">
+
+    </section>
+    <section class="service">
 
     </section>
     <section class="work">
