--- a/index.html
+++ b/index.html
@@ -11,19 +11,32 @@
   <script src="js/script.js"></script>
 </head>
 <body>
-  <main>
     <section class="top-visual">
-      <h1>DAICHI's Portfolio</h1>
-      <p>Thank you for visiting this page.</p>
-      <p>This is a website production in Fukuoka
+      <div class="top-visual__inner">
+        <h1>DAICHI's Portfolio</h1>
+        <p>Thank you for visiting this page.</p>
+        <p>This is a website production in Fukuoka
           Ito Daichi’s portfolio site.</p>
+          <div class="leftBack"></div> 
+          <div class="rightBack"></div> 
+        </div>
           <div class="scroll" >
             <a href="#"><span></span>Scroll</a>
           </div>
     </section>
     <header class="header">
-
+      <nav>
+        <ul>
+          <li>ABOUT</li>
+          <li>SKILL</li>
+          <li>SERVICE</li>
+          <li>WORK</li>
+          <li>PRICE</li>
+          <li>CONTACT</li>
+        </ul>
+      </nav>
     </header>
+  <main>
     <section class="about">
 
     </section>
