--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
   <script src="js/script.js"></script>
 </head>
 <body>
-    <section class="top-visual">
-      <div class="top-visual__inner">
+    <section class="TopVisual">
+      <div class="TopVisual__inner">
         <h1>DAICHI's Portfolio</h1>
         <p>Thank you for visiting this page.</p>
         <p>This is a website production in Fukuoka
           Ito Daichi’s portfolio site.</p>
           <div class="leftBack"></div> 
           <div class="rightBack"></div> 
-        </div>
+      </div>
           <div class="scroll" >
             <a href="#"><span></span>Scroll</a>
           </div>
     </section>
-    <header class="header">
+  <header class="Header">
       <nav>
         <ul>
           <li>ABOUT</li>
@@ -35,28 +35,38 @@
           <li>CONTACT</li>
         </ul>
       </nav>
-    </header>
+  </header>
   <main>
-    <section class="about">
+    <section class="About">
+      <div class="About-visual"></div>
+      <h2>ABOUT</h2>
+      <div class="About__flex">
+        <div class="About-photo">
+          <img src="img/selfphoto.jpeg" alt="自己紹介写真">
+        </div>
+        <div class="About-text">
+          <p class="About-text__name">氏名：伊藤大地</p>
+          <p>福岡在住、WEBサイト製作（HP製作、LP製作）を行っている週末フリーランスです。</p>
+        </div>
+      </div>
+        <p>今、ネット上には数多くのオシャレなWEBサイトがあります。</p>
+        <p>しかし、見た目が洗練されていることも勿論大切ですが、WEBサイトはお客様の求めていることを実現させることが最も重要であると考えています。</p>
+        <p>私は営業経験や、コールセンター運営業務経験が長いため、何よりもコミュニケーションを大切に、お客様のニーズを汲み取ったご提案と、その実現を最重視しております。</p>
+    </section>
+    <section class="Skill">
 
     </section>
-    <section class="skill">
+    <section class="Work">
 
     </section>
-    <section class="service">
+    <section class="Price">
 
     </section>
-    <section class="work">
-
-    </section>
-    <section class="price">
-
-    </section>
-    <section class="contact">
+    <section class="Contact">
 
     </section>
   </main>
-  <footer>
+  <footer class="Footer">
 
   </footer>
 </body>
