トップビジュアル背景色設定

--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
       <div class="TopVisual__inner">
         <h1>DAICHI's Portfolio</h1>
         <p>Thank you for visiting this page.</p>
-        <p>This is a website production in Fukuoka
-          Ito Daichi’s portfolio site.</p>
-          <div class="leftBack"></div> 
-          <div class="rightBack"></div> 
+        <p>This is a website production in Fukuoka Ito Daichi’s portfolio site.</p>
       </div>
+        <div class="leftBack"></div> 
+        <div class="rightBack"></div> 
           <div class="scroll" >
             <a href="#"><span></span>Scroll</a>
           </div>
