トップページアニメーション実装

--- a/index.html
+++ b/index.html
@@ -14,24 +14,24 @@
     <section class="TopVisual">
       <div class="TopVisual__inner">
         <h1>DAICHI's Portfolio</h1>
-        <p>Thank you for visiting this page.</p>
-        <p>This is a website production in Fukuoka Ito Daichi’s portfolio site.</p>
+        <p class="effect-fade__text">Thank you for visiting this page.</p>
+        <p class="effect-fade__text">This is a website production in Fukuoka Ito Daichi’s portfolio site.</p>
       </div>
         <div class="leftBack"></div> 
         <div class="rightBack"></div> 
           <div class="scroll" >
-            <a href="#"><span></span>Scroll</a>
+            <a href="#">Scroll</a><span></span>
           </div>
     </section>
   <header class="Header">
       <nav>
-        <ul>
-          <li>ABOUT</li>
-          <li>SKILL</li>
-          <li>SERVICE</li>
-          <li>WORK</li>
-          <li>PRICE</li>
-          <li>CONTACT</li>
+        <ul class="Header-inner">
+          <li class="Header-inner__list"><a href="#">ABOUT</a></li>
+          <li class="Header-inner__list"><a href="#">SKILL</a></li>
+          <li class="Header-inner__list"><a href="#">SERVICE</a></li>
+          <li class="Header-inner__list"><a href="#">WORK</a></li>
+          <li class="Header-inner__list"><a href="#">PRICE</a></li>
+          <li class="Header-inner__list"><a href="#">CONTACT</a></li>
         </ul>
       </nav>
   </header>
