スライドショー設定

--- a/index.html
+++ b/index.html
@@ -37,7 +37,14 @@
   </header>
   <main>
     <section class="About">
-      <div class="About-visual"></div>
+      <div class="main-visual">
+        <ul id="slideshow" class="slideshow">
+          <li><img src="img/fukuoka.jpeg" alt="福岡" class="slideshow__img"></li>
+          <li><img src="img/momochi.jpeg" alt="百道" class="slideshow__img"></li>
+          <li><img src="img/Canal.jpeg" alt="キャナルシティ" class="slideshow__img"></li>
+          <li><img src="img/nightvew.jpeg" alt="市内夜景" class="slideshow__img"></li>
+        </ul>
+    </div> 
       <h2>ABOUT</h2>
       <div class="About__flex">
         <div class="About-photo">
