--- a/index.html
+++ b/index.html
@@ -39,18 +39,19 @@
     <section class="About">
       <div class="main-visual">
         <ul id="slideshow" class="slideshow">
-          <li><img src="img/fukuoka.jpeg" alt="福岡" class="slideshow__img"></li>
-          <li><img src="img/momochi.jpeg" alt="百道" class="slideshow__img"></li>
-          <li><img src="img/Canal.jpeg" alt="キャナルシティ" class="slideshow__img"></li>
-          <li><img src="img/nightvew.jpeg" alt="市内夜景" class="slideshow__img"></li>
+          <li class="slideshow__img--1"></li>
+          <li class="slideshow__img--2"></li>
+          <li class="slideshow__img--3"></li>
+          <li class="slideshow__img--4"></li>
         </ul>
-    </div> 
+    </div>
+    <div class="About__block">
       <h2>ABOUT</h2>
-      <div class="About__flex">
-        <div class="About-photo">
+      <div class="About-flex">
+        <div class="About-flex__photo">
           <img src="img/selfphoto.jpeg" alt="自己紹介写真">
         </div>
-        <div class="About-text">
+        <div class="About-flex__text">
           <p class="About-text__name">氏名：伊藤大地</p>
           <p>福岡在住、WEBサイト製作（HP製作、LP製作）を行っている週末フリーランスです。</p>
         </div>
@@ -58,6 +59,7 @@
         <p>今、ネット上には数多くのオシャレなWEBサイトがあります。</p>
         <p>しかし、見た目が洗練されていることも勿論大切ですが、WEBサイトはお客様の求めていることを実現させることが最も重要であると考えています。</p>
         <p>私は営業経験や、コールセンター運営業務経験が長いため、何よりもコミュニケーションを大切に、お客様のニーズを汲み取ったご提案と、その実現を最重視しております。</p>
+      </div> 
     </section>
     <section class="Skill">
 
