--- a/index.html
+++ b/index.html
@@ -41,16 +41,17 @@
         <h2>ABOUT</h2>
         <div class="About-flex">
           <div class="About-flex__photo">
-            <img src="img/selfphoto.jpeg" alt="自己紹介写真">
+            <p><img src="img/selfphoto.jpeg" alt="自己紹介写真"></p>
           </div>
           <div class="About-flex__text">
-            <p class="About-text__name">氏名：伊藤大地</p>
+            <p class="About-flex__text--name">氏名：伊藤大地</p>
             <p>福岡在住、WEBサイト製作（HP製作、LP製作）を行っている週末フリーランスです。</p>
           </div>
         </div>
-          <p>今、ネット上には数多くのオシャレなWEBサイトがあります。</p>
-          <p>しかし、見た目が洗練されていることも勿論大切ですが、WEBサイトはお客様の求めていることを実現させることが最も重要であると考えています。</p>
-          <p>私は営業経験や、コールセンター運営業務経験が長いため、何よりもコミュニケーションを大切に、お客様のニーズを汲み取ったご提案と、その実現を最重視しております。</p>
+        <div class="About__theme">
+          <p>見た目が洗練されているWEBサイトは数多くありますが、私はお客様の目的を実現させる手助けとなれるかどうかが、WEBサイトにおいて最も重要であると考えています。</p>
+          <p>ステークホルダーの存在を常に意識する必要がある、業務委託における営業や、コールセンターでの運営業務に携わってきた時間が長い為、お客様、クライアント様とのコミュニケーションを何よりも大切にしており、お仕事のご依頼をいただいたお客様のニーズを汲み取ったご提案と、その実現を最重視しております。</p>
+        </div>
       </div> 
       <div class="main-visual">
         <ul id="slideshow" class="slideshow">
