Serviceパララックスの不具合修正、スクロール誘導アニメーションmixin修正

--- a/index.html
+++ b/index.html
@@ -38,23 +38,25 @@
   <main>
     <section class="About">
       <div class="About__block">
-        <h2>ABOUT</h2>
+        <h2 class="section-title">ABOUT</h2>
         <div class="About-flex">
           <div class="About-flex__photo">
             <p><img src="img/selfphoto.jpeg" alt="自己紹介写真"></p>
           </div>
           <div class="About-flex__text">
-            <p class="About-flex__text--name">氏名：伊藤大地</p>
-            <p>福岡在住、WEBサイト製作（HP製作、LP製作）を行っている週末フリーランスです。</p>
+            <p class="About-flex__text--name">伊藤　大地　／　Itou　Daichi</p>
+            <p></p>
           </div>
         </div>
         <div class="About__theme">
-          <p>見た目が洗練されているWEBサイトは数多くありますが、私はお客様の目的を実現させる手助けとなれるかどうかが、WEBサイトにおいて最も重要であると考えています。</p>
-          <p>ステークホルダーの存在を常に意識する必要がある、業務委託における営業や、コールセンターでの運営業務に携わってきた時間が長い為、お客様、クライアント様とのコミュニケーションを何よりも大切にしており、お仕事のご依頼をいただいたお客様のニーズを汲み取ったご提案と、その実現を最重視しております。</p>
+          <p>福岡在住、WEBサイト製作（HP製作、LP製作）を行っている週末フリーランスです。</p>
+          <p>業務委託での営業や、コールセンターでの管理運営業務に携わってきた時間が長い為、ステークホルダーの存在を常に意識した行動を心掛ける事は勿論、コンシューマーやクライアントとのコミュニケーションを何よりも大切にしています。</p>
+          <p>見た目が洗練されているWEBサイトは数多くありますが、お客様の目的を実現させる手助けとなれるかどうかがWEBサイトにおいては重要であると考えています。</p>
+          <p>お仕事のご依頼をいただいた際は、ご満足いただけるようニーズを汲み取りご提案させていただく事を最重視しております。</p>
         </div>
       </div> 
       <div class="main-visual">
-        <ul id="slideshow" class="slideshow">
+        <ul id="slideshow">
           <li class="slideshow__img--1"></li>
           <li class="slideshow__img--2"></li>
           <li class="slideshow__img--3"></li>
@@ -62,9 +64,12 @@
         </ul>
       </div>
     </section>
-    <section class="Skill">
-      <p>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
-    </section>
+    <setion>
+      <div class="Service">
+        <h2 class="section-title">Service</h2>
+        <p>aaaaaaaaaaaa</p>
+      </div>
+    </setion>
     <section class="Work">
 
     </section>
