attachment: fixedの次の要素に幅・高さを持たせるためにはdisplay blockだと判明

--- a/index.html
+++ b/index.html
@@ -64,11 +64,9 @@
         </ul>
       </div>
     </section>
-    <setion>
-      <div class="Service">
+    <setion class="Service">
         <h2 class="section-title">Service</h2>
         <p>aaaaaaaaaaaa</p>
-      </div>
     </setion>
     <section class="Work">
 
