トップ背景位置、スクロール誘導位置変更、SP時名前アンダーライン長さ、＠カラーから＠width削除

--- a/index.html
+++ b/index.html
@@ -65,8 +65,10 @@
       </div>
     </section>
     <setion class="Service">
+      <div class="inner">
         <h2 class="section-title">Service</h2>
         <p>aaaaaaaaaaaa</p>
+      </div>
     </setion>
     <section class="Work">
 
