パララックスの修正中

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <script src="js/script.js"></script>
 </head>
 <body>
+<!-- TopVisual -->
     <section class="TopVisual">
       <div class="TopVisual__inner">
         <h1>DAICHI's Portfolio</h1>
@@ -23,6 +24,7 @@
             <a href="#">Scroll</a><span></span>
           </div>
     </section>
+<!-- Header -->
   <header class="Header">
       <nav>
         <ul class="Header-inner">
@@ -36,6 +38,7 @@
       </nav>
   </header>
   <main>
+<!-- About -->
     <section class="About">
       <div class="About__block">
         <h2 class="section-title">ABOUT</h2>
@@ -55,31 +58,34 @@
           <p>お仕事のご依頼をいただいた際は、ご満足いただけるようニーズを汲み取りご提案させていただく事を最重視しております。</p>
         </div>
       </div> 
-      <div class="main-visual">
-        <ul id="slideshow">
-          <li class="slideshow__img--1"></li>
-          <li class="slideshow__img--2"></li>
-          <li class="slideshow__img--3"></li>
-          <li class="slideshow__img--4"></li>
-        </ul>
+      <div id="slideshow" class="parallax">
+        <div class="parallax__area parallax__img1"></div>
+        <div class="parallax__area parallax__img2"></div>
+        <div class="parallax__area parallax__img3"></div>
+        <div class="parallax__area parallax__img4"></div>
       </div>
     </section>
+<!-- Service -->
     <setion class="Service">
       <div class="inner">
         <h2 class="section-title">Service</h2>
         <p>aaaaaaaaaaaa</p>
       </div>
     </setion>
+<!-- Work -->
     <section class="Work">
 
     </section>
+<!-- Price -->
     <section class="Price">
 
     </section>
+<!-- Contact -->
     <section class="Contact">
 
     </section>
   </main>
+<!-- Footer -->
   <footer class="Footer">
 
   </footer>
