パララックス再修正（フェードは未実装）、ヘッダーにjQuery実装

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           </div>
     </section>
 <!-- Header -->
-  <header class="Header">
+  <header id="Header" class="Header">
       <nav>
         <ul class="Header-inner">
           <li class="Header-inner__list"><a href="#">ABOUT</a></li>
@@ -53,24 +53,16 @@
         </div>
         <div class="About__theme">
           <p>福岡在住、WEBサイト製作（HP製作、LP製作）を行っている週末フリーランスです。</p>
-          <p>業務委託での営業や、コールセンターでの管理運営業務に携わってきた時間が長い為、ステークホルダーの存在を常に意識した行動を心掛ける事は勿論、コンシューマーやクライアントとのコミュニケーションを何よりも大切にしています。</p>
-          <p>見た目が洗練されているWEBサイトは数多くありますが、お客様の目的を実現させる手助けとなれるかどうかがWEBサイトにおいては重要であると考えています。</p>
-          <p>お仕事のご依頼をいただいた際は、ご満足いただけるようニーズを汲み取りご提案させていただく事を最重視しております。</p>
+          <p>私は社会人経験を積む中で、業務委託での営業や、コールセンターでの管理運営業務に携わってきた時間が長い為、ステークホルダーの存在を常に意識した行動を心掛ける事は勿論、コンシューマーやクライアントとのコミュニケーションを何よりも大切にしています。</p>
+          <p>見た目が洗練されているWEBサイトは数多くありますが、お客様の目的を実現させる手助けになるかどうかが最も重要であると考えています。</p>
+          <p>お仕事のご依頼をいただいた際は、ご満足いただけるようニーズを汲み取りご提案させていただく事を最重視し、誠心誠意込めてご対応させていただきます。</p>
         </div>
       </div> 
-      <div id="slideshow" class="parallax">
-        <div class="parallax__area parallax__img1"></div>
-        <div class="parallax__area parallax__img2"></div>
-        <div class="parallax__area parallax__img3"></div>
-        <div class="parallax__area parallax__img4"></div>
-      </div>
     </section>
 <!-- Service -->
-    <setion class="Service">
-      <div class="inner">
+    <setion class="Service rellax" data-rellax-speed="5">
         <h2 class="section-title">Service</h2>
         <p>aaaaaaaaaaaa</p>
-      </div>
     </setion>
 <!-- Work -->
     <section class="Work">
