ヘッダー透過位置をABOUTトップに変更

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </header>
   <main>
 <!-- About -->
-    <section class="About">
+    <section id="About" class="About">
       <div class="About__block">
         <h2 class="section-title">ABOUT</h2>
         <div class="About-flex">
