各ブロックにスクロールインのアニメーション設定

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <main>
 <!-- About -->
     <section id="About" class="About">
-      <div class="About__block">
+      <div class="About__block fadeIn">
         <h2 class="section-title">ABOUT</h2>
         <div class="About-flex">
           <div class="About-flex__photo">
@@ -60,21 +60,29 @@
       </div> 
     </section>
 <!-- Service -->
-    <setion class="Service rellax" data-rellax-speed="5">
+    <setion class="Service">
+      <div class="fadeIn">
         <h2 class="section-title">Service</h2>
         <p>aaaaaaaaaaaa</p>
+      </div>
     </setion>
 <!-- Work -->
     <section class="Work">
+      <div class="fadeIn">
 
+      </div>
     </section>
 <!-- Price -->
     <section class="Price">
+      <div class="fadeIn">
 
+      </div>
     </section>
 <!-- Contact -->
     <section class="Contact">
+      <div class="fadeIn">
 
+      </div>
     </section>
   </main>
 <!-- Footer -->
