ABOUTボタン追加

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/main.css">
   <link href="https://fonts.googleapis.com/css?family=Rajdhani&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/ba645373e0.js" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="js/script.js"></script>
 </head>
@@ -40,11 +41,11 @@
   <main>
 <!-- About -->
     <section id="About" class="About">
-      <div class="About__block fadeIn">
+      <div class="content-block fadeIn">
         <h2 class="section-title">ABOUT</h2>
         <div class="About-flex">
           <div class="About-flex__photo">
-            <p><img src="img/selfphoto.jpeg" alt="自己紹介写真"></p>
+            <figure><img src="img/selfphoto.jpeg" alt="自己紹介写真"></figure>
           </div>
           <div class="About-flex__text">
             <p class="About-flex__text--name">伊藤　大地　／　Itou　Daichi</p>
@@ -56,38 +57,70 @@
           <p>私は社会人経験を積む中で、業務委託での営業や、コールセンターでの管理運営業務に携わってきた時間が長い為、ステークホルダーの存在を常に意識した行動を心掛ける事は勿論、コンシューマーやクライアントとのコミュニケーションを何よりも大切にしています。</p>
           <p>見た目が洗練されているWEBサイトは数多くありますが、お客様の目的を実現させる手助けになるかどうかが最も重要であると考えています。</p>
           <p>お仕事のご依頼をいただいた際は、ご満足いただけるようニーズを汲み取りご提案させていただく事を最重視し、誠心誠意込めてご対応させていただきます。</p>
+          <div class="ABOUT__link">
+            <p>HPやLPについて、お困りのことがございませんか？</p>
+            <button><a href="#">お問い合わせはこちらへ</a></button>
+          </div>
         </div>
       </div> 
     </section>
 <!-- Service -->
     <setion class="Service">
-      <div class="fadeIn">
+      <div class="content-block fadeIn">
         <h2 class="section-title">Service</h2>
-        <p>aaaaaaaaaaaa</p>
+        <div>
+          <i class="fas fa-laptop-code"></i>
+          <p>コーディング</p>
+          <p>イメージされている形をインターネット上で適切に反映されるようにコーディングを行います。</p>
+        </div>
+          <ul>
+            <li>・PCからだけではなく、スマートフォンからもストレスなく閲覧できるようにレスポンシブデザインで製作致します</li>
+            <li>・新規サイト作成だけでなく、既存サイトの修正や、レスポンシブ化などについても承ります</li>
+            <li>・WEBサイト作成が初めてという方もお気軽にご相談ください。営業的な観点を持って、お客様に必要な内容をご提案をさせていただきます。</li>
+          </ul>
+        <div class="skill">
+          <h3>SKILL</h3>
+          <div class="skill__content">
+            <p><i class="fab fa-html5"></i>HTML</p>
+            <p>検索エンジン最適化（検索で上位に表示させる）を意識したセマンティックなマークアップを行います。</p>
+          </div>
+          <div class="skill__content">
+            <i class="fab fa-css3-alt"></i>
+            <p><i class="fab fa-sass"></i>CSS・Sass</p>
+            <p>WEBサイトを見やすく、使いやすいデザインに装飾します。色やデザインなどご要望があればご相談ください。</p>
+          </div>
+          <div class="skill__content">
+            <p><i class="fab fa-js-square"></i>JavaScript・jQuery</p>
+            <p>クリックでメニューが開閉するアコーディオンメニューや、写真のスライドショーなど動きのあるサイト作成も可能です。</p>
+          </div>
+        </div>
       </div>
     </setion>
 <!-- Work -->
     <section class="Work">
-      <div class="fadeIn">
-
+      <div class="content-block fadeIn">
+          <h2 class="section-title">Work</h2>
+          <p>aaaaaaaaaaaa</p>
       </div>
     </section>
 <!-- Price -->
     <section class="Price">
-      <div class="fadeIn">
-
+      <div class="content-block fadeIn">
+          <h2 class="section-title">Price</h2>
+          <p>aaaaaaaaaaaa</p>
       </div>
     </section>
 <!-- Contact -->
     <section class="Contact">
-      <div class="fadeIn">
-
+      <div class="content-block fadeIn">
+          <h2 class="section-title">Contact</h2>
+          <p>aaaaaaaaaaaa</p>
       </div>
     </section>
   </main>
 <!-- Footer -->
   <footer class="Footer">
-
+      <p>&copy; 2019 DAICHI ITOU</p>
   </footer>
 </body>
 </html>
