ボタンタグ装飾修正

--- a/index.html
+++ b/index.html
@@ -57,9 +57,13 @@
           <p>私は社会人経験を積む中で、業務委託での営業や、コールセンターでの管理運営業務に携わってきた時間が長い為、ステークホルダーの存在を常に意識した行動を心掛ける事は勿論、コンシューマーやクライアントとのコミュニケーションを何よりも大切にしています。</p>
           <p>見た目が洗練されているWEBサイトは数多くありますが、お客様の目的を実現させる手助けになるかどうかが最も重要であると考えています。</p>
           <p>お仕事のご依頼をいただいた際は、ご満足いただけるようニーズを汲み取りご提案させていただく事を最重視し、誠心誠意込めてご対応させていただきます。</p>
-          <div class="ABOUT__link">
+          <div class="About__link">
             <p>HPやLPについて、お困りのことがございませんか？</p>
-            <button><a href="#">お問い合わせはこちらへ</a></button>
+            <div class="About__link-button">
+              <button>お問い合わせはこちらへ</button>
+              <div class="border"></div>
+              <div class="border"></div>
+            </div>
           </div>
         </div>
       </div> 
