コンタクトブロック行きのhref追記。スクロールイベント実装

--- a/index.html
+++ b/index.html
@@ -59,11 +59,10 @@
           <p>お仕事のご依頼をいただいた際は、ご満足いただけるようニーズを汲み取りご提案させていただく事を最重視し、誠心誠意込めてご対応させていただきます。</p>
           <div class="About__link">
             <p>HPやLPについて、お困りのことがございませんか？</p>
-            <div class="About__link-button">
-              <button>お問い合わせはこちらへ</button>
-              <div class="border"></div>
-              <div class="border"></div>
-            </div>
+            <a class="About__link-button" href="#Contact">お問い合わせはこちらへ
+                <div class="border"></div>
+                <div class="border"></div>
+            </a>
           </div>
         </div>
       </div> 
@@ -117,7 +116,7 @@
 <!-- Contact -->
     <section class="Contact">
       <div class="content-block fadeIn">
-          <h2 class="section-title">Contact</h2>
+          <h2 id="Contact" class="section-title">Contact</h2>
           <p>aaaaaaaaaaaa</p>
       </div>
     </section>
