ヘッダータグからSkill削除、SPも一列配置に。全項目ページ内遷移設定。

--- a/index.html
+++ b/index.html
@@ -29,12 +29,11 @@
   <header id="Header" class="Header">
       <nav>
         <ul class="Header-inner">
-          <li class="Header-inner__list"><a href="#">ABOUT</a></li>
-          <li class="Header-inner__list"><a href="#">SKILL</a></li>
-          <li class="Header-inner__list"><a href="#">SERVICE</a></li>
-          <li class="Header-inner__list"><a href="#">WORK</a></li>
-          <li class="Header-inner__list"><a href="#">PRICE</a></li>
-          <li class="Header-inner__list"><a href="#">CONTACT</a></li>
+          <li class="Header-inner__list"><a href="#About">ABOUT</a></li>
+          <li class="Header-inner__list"><a href="#Service">SERVICE</a></li>
+          <li class="Header-inner__list"><a href="#Work">WORK</a></li>
+          <li class="Header-inner__list"><a href="#Price">PRICE</a></li>
+          <li class="Header-inner__list"><a href="#Contact">CONTACT</a></li>
         </ul>
       </nav>
   </header>
@@ -68,7 +67,7 @@
       </div> 
     </section>
 <!-- Service -->
-    <setion class="Service">
+    <setion id="Service" class="Service">
       <div class="content-block fadeIn">
         <h2 class="section-title">Service</h2>
         <div>
@@ -100,23 +99,23 @@
       </div>
     </setion>
 <!-- Work -->
-    <section class="Work">
+    <section id="Work" class="Work">
       <div class="content-block fadeIn">
           <h2 class="section-title">Work</h2>
           <p>aaaaaaaaaaaa</p>
       </div>
     </section>
 <!-- Price -->
-    <section class="Price">
+    <section id="Price" class="Price">
       <div class="content-block fadeIn">
           <h2 class="section-title">Price</h2>
           <p>aaaaaaaaaaaa</p>
       </div>
     </section>
 <!-- Contact -->
-    <section class="Contact">
+    <section id="Contact" class="Contact">
       <div class="content-block fadeIn">
-          <h2 id="Contact" class="section-title">Contact</h2>
+          <h2 class="section-title">Contact</h2>
           <p>aaaaaaaaaaaa</p>
       </div>
     </section>
