Font Awesomeの読み込みをjsからcssに変更、リストの擬似要素にも表示させるように

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/main.css">
   <link href="https://fonts.googleapis.com/css?family=Rajdhani&display=swap" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/ba645373e0.js" crossorigin="anonymous"></script>
+  <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="js/script.js"></script>
 </head>
@@ -70,16 +70,20 @@
     <setion id="Service" class="Service">
       <div class="content-block fadeIn">
         <h2 class="section-title">Service</h2>
-        <div>
-          <i class="fas fa-laptop-code"></i>
-          <p>コーディング</p>
-          <p>イメージされている形をインターネット上で適切に反映されるようにコーディングを行います。</p>
+        <div class="Service__block">
+          <div class="Service__title">
+            <i class="fas fa-laptop-code"></i>
+            <p>WEBサイトコーディング</p>
+          </div>
+            <p class="Service__text">HPやLPのイメージやデザインがあっても、ネット上からアクセスすることはできません。インターネット上で適切に反映するようにコーディングを行います。</p>
         </div>
+        <div class="Service__about">
           <ul>
-            <li>・PCからだけではなく、スマートフォンからもストレスなく閲覧できるようにレスポンシブデザインで製作致します</li>
-            <li>・新規サイト作成だけでなく、既存サイトの修正や、レスポンシブ化などについても承ります</li>
-            <li>・WEBサイト作成が初めてという方もお気軽にご相談ください。営業的な観点を持って、お客様に必要な内容をご提案をさせていただきます。</li>
+              <li class="Service__about-list">PCからだけではなく、スマートフォンからもストレスなく閲覧できるようにレスポンシブデザインで製作致します</li>
+              <li class="Service__about-list">新規サイト作成だけでなく、既存サイトの修正や、レスポンシブ化などについても承ります</li>
+            <li class="Service__about-list">WEBサイト作成が初めてという方もお気軽にご相談ください。営業的な観点を持って、お客様に必要な内容をご提案をさせていただきます。</li>
           </ul>
+        </div>
         <div class="skill">
           <h3>SKILL</h3>
           <div class="skill__content">
