service、skillまで記述完了

--- a/index.html
+++ b/index.html
@@ -75,29 +75,51 @@
             <i class="fas fa-laptop-code"></i>
             <p>WEBサイトコーディング</p>
           </div>
-            <p class="Service__text">HPやLPのイメージやデザインがあっても、ネット上からアクセスすることはできません。インターネット上で適切に反映するようにコーディングを行います。</p>
+          <div class="Service__text">
+            <p>HP・LPのイメージやデザインがあっても、ネット上からアクセスすることはできません。</p>
+            <p >インターネット上で適切に反映させるにはコーディングが必要です。</p>
+          </div>
         </div>
         <div class="Service__about">
-          <ul>
-              <li class="Service__about-list">PCからだけではなく、スマートフォンからもストレスなく閲覧できるようにレスポンシブデザインで製作致します</li>
-              <li class="Service__about-list">新規サイト作成だけでなく、既存サイトの修正や、レスポンシブ化などについても承ります</li>
-            <li class="Service__about-list">WEBサイト作成が初めてという方もお気軽にご相談ください。営業的な観点を持って、お客様に必要な内容をご提案をさせていただきます。</li>
-          </ul>
+          <table>
+            <tr>
+              <td><i class="fas fa-check"></i></td>
+              <td>PCからだけではなく、スマートフォンからもストレスなく閲覧できるようにレスポンシブデザインで製作致します</td>
+            </tr>
+            <tr>
+              <td><i class="fas fa-check"></i></td>
+              <td>新規サイト作成だけでなく、既存サイトの修正や、レスポンシブ化などについても承ります</td>  
+            </tr>
+            <tr>
+              <td><i class="fas fa-check"></i></td>
+              <td>WEBサイト作成が初めてという方もお気軽にご相談ください。営業的な観点を持って、お客様に必要な内容をご提案をさせていただきます。</td>
+            </tr>
+          </table>
         </div>
         <div class="skill">
-          <h3>SKILL</h3>
-          <div class="skill__content">
-            <p><i class="fab fa-html5"></i>HTML</p>
-            <p>検索エンジン最適化（検索で上位に表示させる）を意識したセマンティックなマークアップを行います。</p>
-          </div>
-          <div class="skill__content">
-            <i class="fab fa-css3-alt"></i>
-            <p><i class="fab fa-sass"></i>CSS・Sass</p>
-            <p>WEBサイトを見やすく、使いやすいデザインに装飾します。色やデザインなどご要望があればご相談ください。</p>
-          </div>
-          <div class="skill__content">
-            <p><i class="fab fa-js-square"></i>JavaScript・jQuery</p>
-            <p>クリックでメニューが開閉するアコーディオンメニューや、写真のスライドショーなど動きのあるサイト作成も可能です。</p>
+          <h3>-SKILL-</h3>
+          <div class="skill__container">
+            <div class="skill__container-contents">
+              <div class="skill__container-title">
+                <i class="fab fa-html5"></i>
+                <p>HTML</p>
+              </div>
+                <p class="skill__container-about">検索エンジン最適化（検索で上位に表示させる）を意識したセマンティックなマークアップを行います。</p>
+            </div>
+            <div class="skill__container-contents">
+                <div class="skill__container-title">
+                  <i class="fab fa-css3-alt"></i><i class="fab fa-sass"></i>
+                  <p>CSS・Sass</p>
+                </div>
+                <p class="skill__container-about"> WEBサイトを見やすく、使いやすいデザインに装飾します。色やデザインなどご要望があればご相談ください。</p>
+            </div>
+            <div class="skill__container-contents">
+                <div class="skill__container-title">
+                  <i class="fab fa-js-square"></i>
+                  <p>JavaScript・jQuery</p>
+                </div>
+              <p class="skill__container-about">クリックでメニューが開閉するアコーディオンメニューや、写真のスライドショーなど動きのあるサイト作成も可能です。</p>
+            </div>
           </div>
         </div>
       </div>
