Work途中（Gridレイアウト）

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
           <p>私は社会人経験を積む中で、業務委託での営業や、コールセンターでの管理運営業務に携わってきた時間が長い為、ステークホルダーの存在を常に意識した行動を心掛ける事は勿論、コンシューマーやクライアントとのコミュニケーションを何よりも大切にしています。</p>
           <p>見た目が洗練されているWEBサイトは数多くありますが、お客様の目的を実現させる手助けになるかどうかが最も重要であると考えています。</p>
           <p>お仕事のご依頼をいただいた際は、ご満足いただけるようニーズを汲み取りご提案させていただく事を最重視し、誠心誠意込めてご対応させていただきます。</p>
-          <div class="About__link">
+          <div class="link">
             <p>HPやLPについて、お困りのことがございませんか？</p>
-            <a class="About__link-button" href="#Contact">お問い合わせはこちらへ
+            <a class="link-button" href="#Contact">お問い合わせはこちらへ
                 <div class="border"></div>
                 <div class="border"></div>
             </a>
@@ -128,7 +128,20 @@
     <section id="Work" class="Work">
       <div class="content-block fadeIn">
           <h2 class="section-title">Work</h2>
-          <p>aaaaaaaaaaaa</p>
+          <p class="Work__text">日々新しい技術を学習中です。内容は随時更新していく予定です。</p>
+          <p class="Work__text--sm">※リンク先はPDFをキャプチャしたデータも含まれています。</p>
+          <ul class="Work__capture">
+            <li class="Worlk__capture-img"><a href="#" target="blank"><img src="img/iSARA.jpg" alt="iSaraサイトの模写キャプチャ"></a></li>
+            <li class="Worlk__capture-img"><a href="#"><img src="img/PAS-POL.jpg" alt="PAS=POLサイトの模写キャプチャ"></a></li>
+            <li class="Worlk__capture-img"><a href="#"><img src="img/corporate.jpg" alt="コーポレイトサイトのキャプチャ"></a></li>
+            <li class="Worlk__capture-img"><a href="#"><img src="img/KUJIRACAFE.jpg" alt="カフェサイトのキャプチャ"></a></li>
+          </ul>
+          <div class="link">
+              <a class="link-button" href="#">MORE...
+                  <div class="border"></div>
+                  <div class="border"></div>
+              </a>
+            </div>
       </div>
     </section>
 <!-- Price -->
