キャプチャレイアウトをGridからFlexboxに変更

--- a/index.html
+++ b/index.html
@@ -129,12 +129,15 @@
       <div class="content-block fadeIn">
           <h2 class="section-title">Work</h2>
           <p class="Work__text">日々新しい技術を学習中です。内容は随時更新していく予定です。</p>
-          <p class="Work__text--sm">※リンク先はPDFをキャプチャしたデータも含まれています。</p>
           <ul class="Work__capture">
-            <li class="Worlk__capture-img"><a href="#" target="blank"><img src="img/iSARA.jpg" alt="iSaraサイトの模写キャプチャ"></a></li>
-            <li class="Worlk__capture-img"><a href="#"><img src="img/PAS-POL.jpg" alt="PAS=POLサイトの模写キャプチャ"></a></li>
-            <li class="Worlk__capture-img"><a href="#"><img src="img/corporate.jpg" alt="コーポレイトサイトのキャプチャ"></a></li>
-            <li class="Worlk__capture-img"><a href="#"><img src="img/KUJIRACAFE.jpg" alt="カフェサイトのキャプチャ"></a></li>
+            <li class="work__capture-img"><a href="#"><img src="img/Portfolio.jpg" alt="ポートフォリオキャプチャ"></a>
+              <div class="caption"><p>伊藤大地のポートフォリオサイトです。</p></div></li>
+            <li class="work__capture-img"><a href="#"><img src="img/iSARA.jpg" alt="iSaraサイトの模写キャプチャ"></a>
+              <div class="caption"><p>バンコクのエンジニア育成講座「iSara」のサイト模写です。（画像データ）</p></div></li>
+            <li class="work__capture-img"><a href="#"><img src="img/PAS-POL.jpg" alt="PAS=POLサイトの模写キャプチャ"></a>
+              <div class="caption"><p>世界一周団体TABIPPOのモノづくりブランドPAS-POLのサイト模写です。</p></div></li>
+            <li class="work__capture-img"><a href="#"><img src="img/corporate.jpg" alt="コーポレイトサイトのキャプチャ"></a>
+              <div class="caption"><p>仮想のコーポレートサイトです。</p></div></li>
           </ul>
           <div class="link">
               <a class="link-button" href="#">MORE...
