pxからremに変更。ABOUTに略歴を追記。

--- a/index.html
+++ b/index.html
@@ -53,11 +53,32 @@
         </div>
         <div class="About__theme">
           <p>福岡在住、WEBサイト製作（HP製作、LP製作）を行っている週末フリーランスです。</p>
-          <p>私は社会人経験を積む中で、業務委託での営業や、コールセンターでの管理運営業務に携わってきた時間が長い為、ステークホルダーの存在を常に意識した行動を心掛ける事は勿論、コンシューマーやクライアントとのコミュニケーションを何よりも大切にしています。</p>
-          <p>見た目が洗練されているWEBサイトは数多くありますが、お客様の目的を実現させる手助けになるかどうかが最も重要であると考えています。</p>
-          <p>お仕事のご依頼をいただいた際は、ご満足いただけるようニーズを汲み取りご提案させていただく事を最重視し、誠心誠意込めてご対応させていただきます。</p>
+          <div class="About__theme-history">
+            <p>略歴</p>
+            <table>
+              <tr>
+                <td class="year">2009年</td>
+                <td>全国展開で注文住宅を販売しているハウスメーカーに勤務。飛込訪問や住宅展示場での接客営業を経験。</td>
+              </tr>
+              <tr>
+                <td class="year">2011年</td>
+                <td>販売代理店事業のベンチャー企業へ転職。コンシューマー向けのサービス営業を主に飛込訪問で経験。</td>  
+              </tr>
+              <tr>
+                <td class="year">2014年</td>
+                <td>グループ会社の立ち上げに出向し、太陽光パネルの訪問販売を経験。</td>
+              </tr>
+              <tr>
+                <td class="year">2015年〜</td>
+                <td>社内のコールセンター事業部の立ち上げメンバーに参画し、管理運営サイドにシフトチェンジしたことで、マネジメント業務がメインに。</td>
+              </tr>
+            </table>
+          </div>
+          <p>クライアントワークでの営業経験が長い為、ステークホルダーの存在を常に意識した行動を心掛ける事、他者とのコミュニケーションを大切にする事を仕事のモットーとしてきました。</p>
+          <p>見た目が洗練されているWEBサイトは数多くありますが、お客様の目的を実現させる手助けになるかどうかがWEB製作において最も重要であると考えています。</p>
+          <p>新規注文や受託業務に関わらず、お仕事のご依頼をいただいた際はご満足いただけるように誠心誠意込めてご対応させていただきます。</p>
           <div class="link">
-            <p>HPやLPについて、お困りのことがございませんか？</p>
+            <p>HPやLPの作成について、お困りのことがございませんか？</p>
             <a class="link-button" href="#Contact">お問い合わせはこちらへ
                 <div class="border"></div>
                 <div class="border"></div>
