スクロール誘導のデザイン変更

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         <div class="leftBack"></div> 
         <div class="rightBack"></div> 
           <div class="scroll" >
-            <a href="#">Scroll</a><span></span>
+            <a href="#"><span></span><span></span><span></span>Scroll</a>
+            <!-- <a href="#">Scroll</a><span></span> -->
           </div>
     </section>
 <!-- Header -->
@@ -172,7 +173,37 @@
     <section id="Price" class="Price">
       <div class="content-block fadeIn">
           <h2 class="section-title">Price</h2>
-          <p>aaaaaaaaaaaa</p>
+          <table class="Price__table">
+            <tr class="Price__table-block" >
+              <td class="Price__table-block--left" style="padding: 1rem 2rem;">内容</td>
+              <td class="Price__table-block--right">料金</td>
+            </tr>
+            <tr class="Price__table-block">
+              <td class="Price__table-block--left">LP/コーディング</td>
+              <td class="Price__table-block--right">¥30,000〜</td>
+            </tr>
+            <tr class="Price__table-block">
+              <td class="Price__table-block--left">HP/トップページコーディング</td>
+              <td class="Price__table-block--right">¥30,000〜</td>
+            </tr>
+            <tr class="Price__table-block">
+              <td class="Price__table-block--left">HP/下層ページコーディング</td>
+              <td class="Price__table-block--right">¥15,000〜</td>
+            </tr>
+            <tr class="Price__table-block">
+              <td class="Price__table-block--left">レスポンシブコーディング</td>
+              <td class="Price__table-block--right">¥10,000〜</td>
+            </tr>
+            <tr class="Price__table-block">
+              <td class="Price__table-block--left">その他追加装飾</td>
+              <td class="Price__table-block--right">¥3,000〜</td>
+            </tr>
+            <tr class="Price__table-block" style="border-bottom: none;">
+              <td class="Price__table-block--left" style="padding: 1rem;"></td>
+              <td class="Price__table-block--right"></td>
+            </tr>
+          </table>
+          <p class="Price__text">※上記は参考料金です。ご相談に応じてお見積もりさせていただきます。</p>
       </div>
     </section>
 <!-- Contact -->
