twitterアイコン変更

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
             </div>
           </form>
           <div class="Contant__sns">
-            <a href="https://twitter.com/18__DAiCHi" target="blank"><i class="fab fa-twitter fa-lg faa-horizontal animated-hover"></i></a>
+            <a href="https://twitter.com/18__DAiCHi" target="blank"><i class="fab fa-twitter-square fa-2x faa-horizontal animated-hover"></i></a>
           </div>
       </div>
     </section>
