--- a/index.html
+++ b/index.html
@@ -153,14 +153,70 @@
           <h2 class="section-title">Work</h2>
           <p class="Work__text">日々新しい技術を学習中です。内容は随時更新していく予定です。</p>
           <ul class="Work__capture">
-            <li class="work__capture-img"><a href="#"><img src="img/Portfolio.jpg" alt="ポートフォリオキャプチャ"></a>
-              <div class="caption"><p>伊藤大地のポートフォリオサイトです。</p></div></li>
+            <li class="work__capture-img"><a href="#"><img src="img/Portfolio.png" alt="ポートフォリオキャプチャ"></a>
+              <div class="caption">
+                <div class="modal-link open">
+                    <p>伊藤大地のポートフォリオサイトです。</p>
+                </div>
+                  <div class="overlay"></div>
+                    <div class="modal-window">
+                      <a class="modal-switch" href="https://03daichi18.github.io/MyPortfolio/" target="blank">Site Link</a>
+                      <div class="modal-window__text">
+                          <div class="modal-window__about">
+                              <p>【used language】</p>
+                              <p>HTML / css・sass / JavaScript・jQuery</p>
+                          </div>
+                          <div class="modal-window__about">
+                              <p>【used tool】</p>
+                              <p>vscode / AdobeXD</p>
+                          </div>
+                          <div class="modal-window__about">
+                              <p>【Description】</p>
+                              <p>テンプレートやプラグインを使用せず、フルスクラッチで作成しました。トップビジュアルにアニメーションを使用しインパクトを与えつつ、全体のデザインはシンプルで見やすく、を意識しております。モノクロモードとカラフルモードを切り替えれるようにしております。</p>
+                          </div>
+                      </div>
+                      <p class="close modal-switch">Close</p>
+                    </div>
+              </div>
+            </li>
             <li class="work__capture-img"><a href="#"><img src="img/iSARA.jpg" alt="iSaraサイトの模写キャプチャ"></a>
-              <div class="caption"><p>バンコクのエンジニア育成講座「iSara」のサイト模写です。（画像データ）</p></div></li>
+              <div class="caption">
+                      <div class="modal-link open">
+                        <p>バンコクのエンジニア育成講座「iSara」のサイト模写です。（画像データ）。</p>
+                      </div>
+                      <div class="overlay"></div>
+                      <div class="modal-window">
+                        <a href="img/iSaraPC.pdf" target="blank">PCver.</a>
+                        <a href="img/iSaraSP.pdf" target="blank">SPver.</a>
+                        <p class="close modal-switch">Close</p>
+                    </div>
+              </div>
+            </li>
             <li class="work__capture-img"><a href="#"><img src="img/PAS-POL.jpg" alt="PAS=POLサイトの模写キャプチャ"></a>
-              <div class="caption"><p>世界一周団体TABIPPOのモノづくりブランドPAS-POLのサイト模写です。</p></div></li>
+              <div class="caption">
+                  <div class="modal-link open">
+                      <p>世界一周団体TABIPPOのモノづくりブランドPAS-POLのサイト模写です。</p>
+                  </div>
+                    <div class="overlay"></div>
+                    <div class="modal-window">
+                        <a href="img/Pas-PolPC.pdf" target="blank">PCver.</a>
+                        <a href="img/Pas-PolSP.pdf" target="blank">SPver.</a>
+                        <p class="close modal-switch">Close</p>
+                    </div>
+              </div>
+            </li>
             <li class="work__capture-img"><a href="#"><img src="img/corporate.jpg" alt="コーポレイトサイトのキャプチャ"></a>
-              <div class="caption"><p>仮想のコーポレートサイトです。</p></div></li>
+              <div class="caption">
+                  <div class="modal-link open">
+                      <p>仮想のコーポレートサイトです。</p>
+                  </div>
+                    <div class="overlay"></div>
+                    <div class="modal-window">
+                        <a href="https://03daichi18.github.io/corporateA/" target="blank">クリック</a>
+                        <p class="close modal-switch">Close</p>
+                    </div>
+              </div>
+            </li>
           </ul>
           <div class="link">
               <a class="link-button" href="#">MORE...
